--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <footer>
         <a class="izquierda" href="#">Francisco Manuel Galvez</a>
-        <a class="centro" href="">Github</a>
+        <a class="centro" href="https://github.com/galvez99/Sass">Github</a>
         <a class="derecha" href="#">26/01/24</a>
     </footer>
 </body>
